# lastfm-docklet

./: .gitignore  LastfmClient.vala  LastfmDockItem.vala  LastfmDocklet.vala  LastfmPreferences.vala  README.md  config.vapi  lastfm.gresource.xml  meson.build
po/: POTFILES.in  docklet-lastfm.pot
